--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -17,11 +17,15 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: false
+  sql:
+    init:
+      mode: embedded
   kafka:
     bootstrap-servers: ${KAFKA_HOST}:${KAFKA_PORT}
     topic:
       product-validation: product-validation
       product-validation-failed: product-validation-failed
+      orchestrator: orchestrator
     consumer:
       auto-offset-reset: latest
       group-id: product_group
