feat/finish saga flow and update architecture design img

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
       order-ending-success: order-ending-success
       order-ending-fail: order-ending-fail
       orchestrator: orchestrator
+      notification: notification
     consumer:
       auto-offset-reset: latest
       group-id: order_group
